--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 </head>
 <body class="bg-white text-gray-900">
   <div id="root"></div>
-  <script src="/env-config.js"></script>
-  <script type="module" src="/index.tsx"></script>
+  <script src="./env-config.js"></script> 
+  <script type="module" src="./index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
