--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 <body class="bg-white text-gray-900">
   <div id="root"></div>
   <script src="./env-config.js"></script> 
-  <script type="module" src="./index.tsx"></script>
+  {/* IMPORTANT: Replace JoohnnnyTW and EchoRoom with your actual GitHub username and repository name. */}
+  {/* For example, if your repo URL is https://github.com/john-doe/my-echoroom-app, use "john-doe" and "my-echoroom-app". */}
+  <script type="module" src="https://esm.sh/gh/JoohnnnyTW/EchoRoom@main/index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
