--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
     "react/jsx-runtime": "https://esm.sh/react@^19.1.0/jsx-runtime",
-    "@google/genai": "https://esm.sh/@google/genai@^1.4.0",
-    "openai": "https://esm.sh/openai@^4.52.7"
+    "@google/genai": "https://esm.sh/@google/genai@^1.4.0"
   }
 }
 </script>
@@ -41,8 +40,7 @@
 <body class="bg-white text-gray-900">
   <div id="root"></div>
   <script src="./env-config.js"></script> 
-  {/* IMPORTANT: Replace JoohnnnyTW and EchoRoom with your actual GitHub username and repository name. */}
-  {/* For example, if your repo URL is https://github.com/john-doe/my-echoroom-app, use "john-doe" and "my-echoroom-app". */}
   <script type="module" src="https://esm.sh/gh/JoohnnnyTW/EchoRoom@main/index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
