--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,13 +47,14 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react/jsx-runtime": "https://esm.sh/react@^19.1.0/jsx-runtime",
+    "react-dom": "https://esm.sh/react-dom@^19.1.0",
+    "react-dom/client": "https://esm.sh/react-dom@^19.1.0/client",
     "@google/genai": "https://esm.sh/@google/genai@0.15.0",
     "zod": "https://esm.sh/zod@^3.23.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.18.0",
-    "react-dropzone": "https://esm.sh/react-dropzone@^14.3.8"
+    "react-dropzone": "https://esm.sh/react-dropzone@^14.3.8",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+    "react/": "https://esm.sh/react@^19.1.0/"
   }
 }
 </script>
